Fix overflow and mobile view

--- a/src/app/feature/text-container-layout/text-container-layout.component.scss
+++ b/src/app/feature/text-container-layout/text-container-layout.component.scss
@@ -2,6 +2,7 @@
   margin: 20px 0 0 20px;
   .typing-container{
     display: flex;
+    overflow-wrap: anywhere;
     .typing-prefix-container{
       display: flex;
       min-width: 150px;
